--- a/restaurants/templates/list.html
+++ b/restaurants/templates/list.html
@@ -21,6 +21,8 @@
           {% endif %}
           <div class="card-body">
             <h5 class="card-title">{{restaurant.name}}</h5>
+                <button id="{{restaurant.id}}" class="btn btn-light {% if restaurant.id in favorite_restaurents %} text-danger {% endif %}" type="submit" onClick="like({{restaurant.id}})"><i class="fas fa-heart"></i></button>
+
             <p class="card-text">{{restaurant.description|truncatechars:25}}</p>
           </div>
           <ul class="list-group list-group-flush">
@@ -32,5 +34,32 @@
     </div>
     {% endfor %}
 </div>
+<script>
+  function like(id){
+    let button_id = "#" + id
+
+    $.ajax({
+
+      type: "GET",
+      url: '/restaurants/'+id+'/favorite/',
+
+      success: function(data){
+
+        if(data.action){
+          $(button_id).addClass('text-danger');
+        }
+
+        else{
+          $(button_id).removeClass('text-danger');
+        }
+
+      },
+
+      error: function(){
+        console.log("Favorite Error");
+      },
+    })        
+  }
+</script>
 {% endblock content %}
 
